[fix] long file name bug

--- a/css/images.css
+++ b/css/images.css
@@ -105,6 +105,9 @@ body{
     font-weight: 500;
     font-size: 14px;
     color: #0b0b0b;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .image-icon{
